Replaced 'new Boolean(...)' constructor calls.