@@ -746,7 +746,7 @@ public class CmsEditSiteForm extends CmsBasicDialog {
 
         if (!OpenCms.getSiteManager().isConfigurableWebServer()) {
             m_fieldWebServer.setVisible(false);
-            m_fieldWebServer.setValue(new Boolean(true));
+            m_fieldWebServer.setValue(Boolean.valueOf(true));
 
         }
 
@@ -861,7 +861,7 @@ public class CmsEditSiteForm extends CmsBasicDialog {
         m_fieldExclusiveError.setEnabled(false);
         Receiver uploadReceiver = new FavIconReceiver();
 
-        m_fieldWebServer.setValue(new Boolean(true));
+        m_fieldWebServer.setValue(Boolean.valueOf(true));
 
         m_fieldUploadFavIcon.setReceiver(uploadReceiver);
         m_fieldUploadFavIcon.setButtonCaption(CmsVaadinUtils.getMessageText(Messages.GUI_SITE_SELECT_FILE_0));
@@ -2052,11 +2052,11 @@ public class CmsEditSiteForm extends CmsBasicDialog {
         if (m_site.getErrorPage() != null) {
             m_fieldErrorPage.setValue(m_site.getErrorPage());
         }
-        m_fieldWebServer.setValue(new Boolean(m_site.isWebserver()));
+        m_fieldWebServer.setValue(Boolean.valueOf(m_site.isWebserver()));
         m_fieldWebServer.setEnabled(enableAll);
-        m_fieldExclusiveURL.setValue(new Boolean(m_site.isExclusiveUrl()));
+        m_fieldExclusiveURL.setValue(Boolean.valueOf(m_site.isExclusiveUrl()));
         m_fieldExclusiveURL.setEnabled(enableAll);
-        m_fieldExclusiveError.setValue(new Boolean(m_site.isExclusiveError()));
+        m_fieldExclusiveError.setValue(Boolean.valueOf(m_site.isExclusiveError()));
         m_fieldExclusiveError.setEnabled(enableAll);
 
         Map<String, String> siteParameters = m_site.getParameters();
